--- a/src/styles/global/common.scss
+++ b/src/styles/global/common.scss
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Merriweather', serif;
+  color: $black;
 }
 
 .isvg.loaded {
